services/functional-tests/src/test/resources/eap7-testrunner-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The TestRunner's HTTP port.
  labels:
    name: testrunner-http
  name: testrunner-http
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    name: testrunner
